# polycool-copy

./: .gitignore  .railway-trigger  ARCHITECTURE_DIAGRAM.txt  CUSTOM_BUY_BUTTON_DEBUG_STATUS.md  DELETE_US_PROJECT_GUIDE.md  EGRESS_FIX_APPLIED.md  ENGLISH_UX_RULE.md  FIX_CLOB_TOKENS_GUIDE.md  FLOW_RECAP.md  OCTOBER_30_VS_NOW_COMPARISON.md  POLLER_DATA_FLOW_DIAGRAM.txt  PRICE_MANAGEMENT_OPTIMIZATION.md  REDEEM_BUG_ANALYSIS.md  SMART_TRADING_CUSTOM_BUY_FIXED.md  SUPABASE_EGRESS_ANALYSIS.md  TELEGRAM_TIMEOUT_SUMMARY.txt  WEBSOCKET_ANALYSIS.md  WEBSOCKET_DEBUG_FIX.md  app.py  check_bot_instances.py  check_markets.py  debug_market_tokens.py  decrypt_and_verify.py  monitor_bot_updates.py  railway-bridge.json  railway-poller.json  railway-streamer.json  railway-webhook.json  railway.json  run_enrichment_railway.sh  run_migration_local.sh  run_migration_public.sh  verify_keypair_mismatch.py
polycool-rebuild/: .gitignore  ANALYSE_REFERRAL.md  ARCHITECTURE_AUDIT_REPORT.md  AUDIT_COPY_SMART_TRADING.md  AUDIT_REPORT.md  BACKFILL_README.md  COPY_TRADING_DIAGNOSTICS.md  COPY_TRADING_LATENCY_ANALYSIS.md  COPY_TRADING_LISTENER_FIX.md  CORRECTIONS_APPLIED.md  FIX_MARKETS_DATETIME.md  FIX_REFERRAL_CREATION.md  FIX_RELOADER_SHUTDOWN.md  FIX_TELEGRAM_USER_ID.md  GUIDE_DEMARRAGE_LOCAL.md  HANDLERS_SKIP_DB_OVERVIEW.md  HANDLERS_SKIP_DB_STATUS.md  LOG_CLEANING_README.md  Makefile  NOTIFICATION_SYSTEM_README.md  PLAN_IMPLEMENTATION_STATUS.md  POLLER_STATUS_AND_TARGET.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_LIVE.md  PSYCOPG_MIGRATION.md  Procfile  QUICK_COMMANDS_SETUP.md  QUICK_START_LOCAL.md  QUICK_START_LOGS.md  RAILWAY_DEPLOYMENT_STATUS.md  RAILWAY_DEPLOYMENT_SUCCESS.md  README.md  RESULTATS_TEST_REFERRAL.md  RESUME_TEST_REFERRAL.md  SKIP_DB_EXPLANATION.md  SUPABASE_CONNECTION_FIX.md  TEST_LOCAL.md  TEST_REFERRAL_FLOW.md  WEBSOCKET_FIX.md  WEBSOCKET_IMPLEMENTATION_PLAN.md  (+55 more)
polycool-rebuild/alert-channel-bot/: README.md  config.py  database.py  formatter.py  main.py  poller.py  railway.json  requirements.txt  sender.py  webhook_handler.py
polycool-rebuild/docs/: 404_ERROR_HANDLING_FIX.md  ANALYSE_GLOBALE.md  ANALYSE_REDIS_CACHE.md  ARCHITECTURE_WEBSOCKET_VERIFICATION.md  AUDIT_COMPLET.md  AUDIT_HANDLERS_MIGRATION.md  BOT_CALLBACKS_VERIFICATION.md  BOT_FEATURES_AUDIT.md  CACHE_MANAGEMENT_AUDIT.md  CALLBACK_DATA_FIX.md  CATEGORY_PAGINATION_FIX.md  CONDITIONS_REFERRAL_LIST.md  CONDITION_ID_VS_MARKET_ID_FIX.md  COPY_TRADING_FINALIZATION.md  COPY_TRADING_FLOW_ANALYSIS.md  COPY_TRADING_GAP_ANALYSIS.md  COPY_TRADING_VS_SMART_TRADING.md  DATA_INGESTION_AUDIT.md  EVENT_MARKETS_FIX.md  EVENT_TITLE_VS_TITLE_LOGIC.md  EXECUTE_TEST_PLAN.md  FEE_SYSTEM_PNL_ANALYSIS.md  GUIDE_TEST_MANUEL_TELEGRAM.md  KEYWORD_POLLER.md  LOCAL_TESTING.md  LOCAL_TESTING_PRODUCTION_LIKE.md  LOGS_ERRORS_ANALYSIS.md  PERFORMANCE_AUDIT_REPORT.md  PLAN_POSITION_ID_REFACTOR.md  POLLER_ANALYSIS.md  POLLER_MISSING_DATA_FIX.md  QUICK_START_TESTING.md  RAILWAY_MULTI_SERVICE_DEPLOY.md  RAILWAY_STARTUP_DIAGNOSTICS.md  RAILWAY_VALIDATION_CHECKLIST.md  REFERRAL_SYSTEM_ARCHITECTURE.md  RESTART_API_FOR_NEW_ENDPOINTS.md  RLS_SECURITY_STATUS.md  SMART_TRADING_LATENCY_ANALYSIS.md  STATUS_RECAP.md  (+16 more)
polycool-rebuild/migrations/: add_amount_usdc_to_trades.sql  add_budget_fields_to_copy_trading_allocations.sql  add_is_copy_trade_to_positions.sql  add_leader_balance_to_watched_addresses.sql  add_position_id_to_positions.sql  add_smart_traders_positions.sql  add_updated_at_to_smart_positions.sql  add_user_stats_columns.sql  create_copy_trading_history_table.sql  create_leader_positions_table.sql  create_referrals_and_fees_tables.sql  create_resolved_positions_table.sql  enable_rls_security.sql  fix_telegram_user_id_bigint.sql  optimize_indexes.sql
polycool-rebuild/scripts/: backfill_event_parents.py  cleanup_websocket_subscriptions.py  cleanup_websocket_subscriptions_api.py  cleanup_websocket_subscriptions_supabase.py  count_standalone_markets.py  diagnose_positions.py  fix_duplicate_positions.py  import_smart_wallets.py  run_unified_backfill.py  seed_watched_addresses.py  validate_backfill.py
polycool-rebuild/telegram_bot/: main.py
(+761 files in other folders)
