[project]
name = "polymarket-trading-bot"
version = "2.0.0"
description = "24/7 Polymarket Trading Bot with Telegram Interface"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for feature flows",
    "slow: Slow running tests",
    "async: Async tests"
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
