[project]
name = "subsquid-dipdup-indexer"
version = "0.1.0"
description = "DipDup on-chain indexer for PolyMarket Conditional Tokens fills and user transactions"
authors = [{name = "Engineering Team"}]
requires-python = ">=3.10"
dependencies = [
    "dipdup>=7.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
